Add feature addressbook

--- a/src/i18n/locales/en/core.json
+++ b/src/i18n/locales/en/core.json
@@ -19,6 +19,30 @@
   },
   "address": "address:",
   "address_book": "address book",
+  "address_book_title": "address book - {{coinType}}",
+  "address_book_empty": "no addresses saved yet",
+  "address_book_add_new": "add new address",
+  "address_book_search": "search by name or address",
+  "address_book_name": "name",
+  "address_book_address": "address",
+  "address_book_note": "note",
+  "address_book_actions": "actions",
+  "address_book_edit": "edit",
+  "address_book_delete": "delete",
+  "address_book_use": "use address",
+  "address_book_save": "save",
+  "address_book_cancel": "cancel",
+  "address_book_delete_confirm": "are you sure you want to delete {{name}}?",
+  "address_book_name_required": "name is required",
+  "address_book_name_max_length": "name must be 50 characters or less",
+  "address_book_address_required": "address is required",
+  "address_book_address_invalid": "invalid {{coinType}} address format",
+  "address_book_note_max_length": "note must be 200 characters or less",
+  "address_book_added": "address added successfully",
+  "address_book_updated": "address updated successfully",
+  "address_book_deleted": "address deleted successfully",
+  "address_book_copy": "copy address",
+  "address_book_copied": "address copied to clipboard",
   "amount": "amount",
   "balance": "balance:",
   "balance_available": "available balance:",
