Add I18N translation for addressbook

--- a/src/i18n/locales/ar/core.json
+++ b/src/i18n/locales/ar/core.json
@@ -19,6 +19,30 @@
   },
   "address": "العنوان:",
   "address_book": "دفتر العناوين",
+  "address_book_title": "دفتر العناوين - {{coinType}}",
+  "address_book_empty": "لا توجد عناوين محفوظة بعد",
+  "address_book_add_new": "إضافة عنوان جديد",
+  "address_book_search": "البحث حسب الاسم أو العنوان أو الملاحظة",
+  "address_book_name": "الاسم",
+  "address_book_address": "العنوان",
+  "address_book_note": "ملاحظة",
+  "address_book_actions": "إجراءات",
+  "address_book_edit": "تحرير",
+  "address_book_delete": "حذف",
+  "address_book_use": "استخدام العنوان",
+  "address_book_save": "حفظ",
+  "address_book_cancel": "إلغاء",
+  "address_book_delete_confirm": "هل أنت متأكد من رغبتك في حذف {{name}}؟",
+  "address_book_name_required": "الاسم مطلوب",
+  "address_book_name_max_length": "يجب أن يكون الاسم 50 حرفًا أو أقل",
+  "address_book_address_required": "العنوان مطلوب",
+  "address_book_address_invalid": "تنسيق عنوان {{coinType}} غير صالح",
+  "address_book_note_max_length": "يجب أن تكون الملاحظة {{ max_note }} حرفًا أو أقل",
+  "address_book_added": "تمت إضافة العنوان بنجاح",
+  "address_book_updated": "تم تحديث العنوان بنجاح",
+  "address_book_deleted": "تم حذف العنوان بنجاح",
+  "address_book_copy": "نسخ العنوان",
+  "address_book_copied": "تم نسخ العنوان إلى الحافظة",
   "amount": "المبلغ",
   "balance": "الرصيد:",
   "balance_available": "الرصيد المتاح:",
