--- a/src/i18n/locales/de/core.json
+++ b/src/i18n/locales/de/core.json
@@ -19,6 +19,30 @@
   },
   "address": "Adresse:",
   "address_book": "Adressbuch",
+  "address_book_title": "Adressbuch - {{coinType}}",
+  "address_book_empty": "noch keine Adressen gespeichert",
+  "address_book_add_new": "neue Adresse hinzufügen",
+  "address_book_search": "nach Name, Adresse oder Notiz suchen",
+  "address_book_name": "Name",
+  "address_book_address": "Adresse",
+  "address_book_note": "Notiz",
+  "address_book_actions": "Aktionen",
+  "address_book_edit": "bearbeiten",
+  "address_book_delete": "löschen",
+  "address_book_use": "Adresse verwenden",
+  "address_book_save": "speichern",
+  "address_book_cancel": "abbrechen",
+  "address_book_delete_confirm": "Möchten Sie {{name}} wirklich löschen?",
+  "address_book_name_required": "Name ist erforderlich",
+  "address_book_name_max_length": "Name darf maximal 50 Zeichen lang sein",
+  "address_book_address_required": "Adresse ist erforderlich",
+  "address_book_address_invalid": "Ungültiges {{coinType}} Adressformat",
+  "address_book_note_max_length": "Notiz darf maximal {{ max_note }} Zeichen lang sein",
+  "address_book_added": "Adresse erfolgreich hinzugefügt",
+  "address_book_updated": "Adresse erfolgreich aktualisiert",
+  "address_book_deleted": "Adresse erfolgreich gelöscht",
+  "address_book_copy": "Adresse kopieren",
+  "address_book_copied": "Adresse in Zwischenablage kopiert",
   "amount": "Betrag",
   "balance": "Guthaben:",
   "balance_available": "Verfügbares Guthaben:",
