--- a/src/i18n/locales/es/core.json
+++ b/src/i18n/locales/es/core.json
@@ -19,6 +19,30 @@
   },
   "address": "dirección:",
   "address_book": "libreta de direcciones",
+  "address_book_title": "libreta de direcciones - {{coinType}}",
+  "address_book_empty": "aún no hay direcciones guardadas",
+  "address_book_add_new": "añadir nueva dirección",
+  "address_book_search": "buscar por nombre, dirección o nota",
+  "address_book_name": "nombre",
+  "address_book_address": "dirección",
+  "address_book_note": "nota",
+  "address_book_actions": "acciones",
+  "address_book_edit": "editar",
+  "address_book_delete": "eliminar",
+  "address_book_use": "usar dirección",
+  "address_book_save": "guardar",
+  "address_book_cancel": "cancelar",
+  "address_book_delete_confirm": "¿estás seguro de que quieres eliminar {{name}}?",
+  "address_book_name_required": "el nombre es obligatorio",
+  "address_book_name_max_length": "el nombre debe tener 50 caracteres o menos",
+  "address_book_address_required": "la dirección es obligatoria",
+  "address_book_address_invalid": "formato de dirección {{coinType}} no válido",
+  "address_book_note_max_length": "la nota debe tener {{ max_note }} caracteres o menos",
+  "address_book_added": "dirección añadida correctamente",
+  "address_book_updated": "dirección actualizada correctamente",
+  "address_book_deleted": "dirección eliminada correctamente",
+  "address_book_copy": "copiar dirección",
+  "address_book_copied": "dirección copiada al portapapeles",
   "amount": "monto",
   "balance": "saldo:",
   "balance_available": "saldo disponible:",
