--- a/src/i18n/locales/et/core.json
+++ b/src/i18n/locales/et/core.json
@@ -19,6 +19,30 @@
   },
   "address": "aadress:",
   "address_book": "aadressiraamat",
+  "address_book_title": "aadressiraamat - {{coinType}}",
+  "address_book_empty": "ühtegi aadressi pole veel salvestatud",
+  "address_book_add_new": "lisa uus aadress",
+  "address_book_search": "otsi nime, aadressi või märkuse järgi",
+  "address_book_name": "nimi",
+  "address_book_address": "aadress",
+  "address_book_note": "märkus",
+  "address_book_actions": "toimingud",
+  "address_book_edit": "muuda",
+  "address_book_delete": "kustuta",
+  "address_book_use": "kasuta aadressi",
+  "address_book_save": "salvesta",
+  "address_book_cancel": "tühista",
+  "address_book_delete_confirm": "kas olete kindel, et soovite kustutada {{name}}?",
+  "address_book_name_required": "nimi on kohustuslik",
+  "address_book_name_max_length": "nimi peab olema 50 tähemärki või vähem",
+  "address_book_address_required": "aadress on kohustuslik",
+  "address_book_address_invalid": "kehtetu {{coinType}} aadressi formaat",
+  "address_book_note_max_length": "märkus peab olema {{ max_note }} tähemärki või vähem",
+  "address_book_added": "aadress lisatud edukalt",
+  "address_book_updated": "aadress uuendatud edukalt",
+  "address_book_deleted": "aadress kustutatud edukalt",
+  "address_book_copy": "kopeeri aadress",
+  "address_book_copied": "aadress kopeeritud lõikelauale",
   "amount": "summa",
   "balance": "jääk:",
   "balance_available": "saadaval olev jääk:",
