--- a/src/i18n/locales/fr/core.json
+++ b/src/i18n/locales/fr/core.json
@@ -18,7 +18,31 @@
     "transfer_coin": "Transférer {{ coin }}"
   },
   "address": "adresse :",
-  "address_book": "carnet d’adresses",
+  "address_book": "carnet d'adresses",
+  "address_book_title": "carnet d'adresses - {{coinType}}",
+  "address_book_empty": "aucune adresse enregistrée pour le moment",
+  "address_book_add_new": "ajouter une nouvelle adresse",
+  "address_book_search": "rechercher par nom, adresse ou note",
+  "address_book_name": "nom",
+  "address_book_address": "adresse",
+  "address_book_note": "note",
+  "address_book_actions": "actions",
+  "address_book_edit": "modifier",
+  "address_book_delete": "supprimer",
+  "address_book_use": "utiliser l'adresse",
+  "address_book_save": "enregistrer",
+  "address_book_cancel": "annuler",
+  "address_book_delete_confirm": "êtes-vous sûr de vouloir supprimer {{name}} ?",
+  "address_book_name_required": "le nom est obligatoire",
+  "address_book_name_max_length": "le nom doit contenir 50 caractères ou moins",
+  "address_book_address_required": "l'adresse est obligatoire",
+  "address_book_address_invalid": "format d'adresse {{coinType}} invalide",
+  "address_book_note_max_length": "la note doit contenir {{ max_note }} caractères ou moins",
+  "address_book_added": "adresse ajoutée avec succès",
+  "address_book_updated": "adresse mise à jour avec succès",
+  "address_book_deleted": "adresse supprimée avec succès",
+  "address_book_copy": "copier l'adresse",
+  "address_book_copied": "adresse copiée dans le presse-papiers",
   "amount": "montant",
   "balance": "solde :",
   "balance_available": "solde disponible :",
