--- a/src/i18n/locales/it/core.json
+++ b/src/i18n/locales/it/core.json
@@ -19,6 +19,30 @@
   },
   "address": "indirizzo:",
   "address_book": "rubrica",
+  "address_book_title": "rubrica - {{coinType}}",
+  "address_book_empty": "nessun indirizzo salvato ancora",
+  "address_book_add_new": "aggiungi nuovo indirizzo",
+  "address_book_search": "cerca per nome, indirizzo o nota",
+  "address_book_name": "nome",
+  "address_book_address": "indirizzo",
+  "address_book_note": "nota",
+  "address_book_actions": "azioni",
+  "address_book_edit": "modifica",
+  "address_book_delete": "elimina",
+  "address_book_use": "usa indirizzo",
+  "address_book_save": "salva",
+  "address_book_cancel": "annulla",
+  "address_book_delete_confirm": "sei sicuro di voler eliminare {{name}}?",
+  "address_book_name_required": "il nome è obbligatorio",
+  "address_book_name_max_length": "il nome deve essere di 50 caratteri o meno",
+  "address_book_address_required": "l'indirizzo è obbligatorio",
+  "address_book_address_invalid": "formato indirizzo {{coinType}} non valido",
+  "address_book_note_max_length": "la nota deve essere di {{ max_note }} caratteri o meno",
+  "address_book_added": "indirizzo aggiunto con successo",
+  "address_book_updated": "indirizzo aggiornato con successo",
+  "address_book_deleted": "indirizzo eliminato con successo",
+  "address_book_copy": "copia indirizzo",
+  "address_book_copied": "indirizzo copiato negli appunti",
   "amount": "importo",
   "balance": "saldo:",
   "balance_available": "saldo disponibile:",
