--- a/src/i18n/locales/ja/core.json
+++ b/src/i18n/locales/ja/core.json
@@ -19,6 +19,30 @@
   },
   "address": "アドレス:",
   "address_book": "アドレス帳",
+  "address_book_title": "アドレス帳 - {{coinType}}",
+  "address_book_empty": "まだアドレスが保存されていません",
+  "address_book_add_new": "新しいアドレスを追加",
+  "address_book_search": "名前、アドレス、またはメモで検索",
+  "address_book_name": "名前",
+  "address_book_address": "アドレス",
+  "address_book_note": "メモ",
+  "address_book_actions": "操作",
+  "address_book_edit": "編集",
+  "address_book_delete": "削除",
+  "address_book_use": "アドレスを使用",
+  "address_book_save": "保存",
+  "address_book_cancel": "キャンセル",
+  "address_book_delete_confirm": "{{name}}を削除してもよろしいですか？",
+  "address_book_name_required": "名前は必須です",
+  "address_book_name_max_length": "名前は50文字以内にしてください",
+  "address_book_address_required": "アドレスは必須です",
+  "address_book_address_invalid": "無効な{{coinType}}アドレス形式",
+  "address_book_note_max_length": "メモは{{ max_note }}文字以内にしてください",
+  "address_book_added": "アドレスが正常に追加されました",
+  "address_book_updated": "アドレスが正常に更新されました",
+  "address_book_deleted": "アドレスが正常に削除されました",
+  "address_book_copy": "アドレスをコピー",
+  "address_book_copied": "アドレスをクリップボードにコピーしました",
   "amount": "金額",
   "balance": "残高:",
   "balance_available": "利用可能残高:",
