--- a/src/i18n/locales/pt/core.json
+++ b/src/i18n/locales/pt/core.json
@@ -19,6 +19,30 @@
   },
   "address": "endereço:",
   "address_book": "agenda de endereços",
+  "address_book_title": "agenda de endereços - {{coinType}}",
+  "address_book_empty": "ainda não há endereços salvos",
+  "address_book_add_new": "adicionar novo endereço",
+  "address_book_search": "pesquisar por nome, endereço ou nota",
+  "address_book_name": "nome",
+  "address_book_address": "endereço",
+  "address_book_note": "nota",
+  "address_book_actions": "ações",
+  "address_book_edit": "editar",
+  "address_book_delete": "excluir",
+  "address_book_use": "usar endereço",
+  "address_book_save": "salvar",
+  "address_book_cancel": "cancelar",
+  "address_book_delete_confirm": "tem certeza de que deseja excluir {{name}}?",
+  "address_book_name_required": "o nome é obrigatório",
+  "address_book_name_max_length": "o nome deve ter 50 caracteres ou menos",
+  "address_book_address_required": "o endereço é obrigatório",
+  "address_book_address_invalid": "formato de endereço {{coinType}} inválido",
+  "address_book_note_max_length": "a nota deve ter {{ max_note }} caracteres ou menos",
+  "address_book_added": "endereço adicionado com sucesso",
+  "address_book_updated": "endereço atualizado com sucesso",
+  "address_book_deleted": "endereço excluído com sucesso",
+  "address_book_copy": "copiar endereço",
+  "address_book_copied": "endereço copiado para a área de transferência",
   "amount": "valor",
   "balance": "saldo:",
   "balance_available": "saldo disponível:",
