--- a/src/i18n/locales/zh/core.json
+++ b/src/i18n/locales/zh/core.json
@@ -19,6 +19,30 @@
   },
   "address": "地址：",
   "address_book": "地址簿",
+  "address_book_title": "地址簿 - {{coinType}}",
+  "address_book_empty": "尚未保存地址",
+  "address_book_add_new": "添加新地址",
+  "address_book_search": "按名称、地址或备注搜索",
+  "address_book_name": "名称",
+  "address_book_address": "地址",
+  "address_book_note": "备注",
+  "address_book_actions": "操作",
+  "address_book_edit": "编辑",
+  "address_book_delete": "删除",
+  "address_book_use": "使用地址",
+  "address_book_save": "保存",
+  "address_book_cancel": "取消",
+  "address_book_delete_confirm": "您确定要删除{{name}}吗？",
+  "address_book_name_required": "名称为必填项",
+  "address_book_name_max_length": "名称不得超过50个字符",
+  "address_book_address_required": "地址为必填项",
+  "address_book_address_invalid": "无效的{{coinType}}地址格式",
+  "address_book_note_max_length": "备注不得超过{{ max_note }}个字符",
+  "address_book_added": "地址添加成功",
+  "address_book_updated": "地址更新成功",
+  "address_book_deleted": "地址删除成功",
+  "address_book_copy": "复制地址",
+  "address_book_copied": "地址已复制到剪贴板",
   "amount": "金额",
   "balance": "余额：",
   "balance_available": "可用余额：",
