Double click to copy the address

--- a/src/i18n/locales/ar/core.json
+++ b/src/i18n/locales/ar/core.json
@@ -8,6 +8,7 @@
     "close": "إغلاق",
     "copy_address": "نسخ العنوان",
     "copy_hash": "نسخ التجزئة: {{ hash }}",
+    "double_click_copy_address": "انقر نقرًا مزدوجًا للنسخ \n{{ address }}",
     "force_sync": "فرض المزامنة",
     "refresh": "تحديث",
     "remove": "إزالة",
