--- a/src/i18n/locales/fr/core.json
+++ b/src/i18n/locales/fr/core.json
@@ -6,8 +6,9 @@
     "cancel": "Annuler",
     "change_server": "Changer de serveur",
     "close": "Fermer",
-    "copy_address": "Copier l’adresse",
+    "copy_address": "Copier l'adresse",
     "copy_hash": "Copier le hachage : {{ hash }}",
+    "double_click_copy_address": "double-cliquez pour copier \n{{ address }}",
     "force_sync": "Forcer la synchronisation",
     "refresh": "Actualiser",
     "remove": "Supprimer",
