--- a/src/i18n/locales/en/core.json
+++ b/src/i18n/locales/en/core.json
@@ -8,7 +8,7 @@
     "close": "close",
     "copy_address": "copy address",
     "copy_hash": "copy hash: {{ hash }}",
-    "double_click_copy_address": "double-click to copy\n{{ address }}",
+    "double_click_addressbook": "double-click to add to address book\n{{ address }}",
     "force_sync": "force sync",
     "refresh": "refresh",
     "remove": "remove",
