--- a/src/i18n/locales/et/core.json
+++ b/src/i18n/locales/et/core.json
@@ -8,7 +8,7 @@
     "close": "Sulge",
     "copy_address": "Kopeeri aadress",
     "copy_hash": "Kopeeri räsi: {{ hash }}",
-    "double_click_copy_address": "topeltklõpsake kopeerimiseks\n{{ address }}",
+    "double_click_addressbook": "topeltklõpsake aadressiraamatusse lisamiseks\n{{ address }}",
     "force_sync": "Sunni sünkroonimist",
     "refresh": "Värskenda",
     "remove": "Eemalda",
