--- a/src/i18n/locales/ja/core.json
+++ b/src/i18n/locales/ja/core.json
@@ -8,7 +8,7 @@
     "close": "閉じる",
     "copy_address": "アドレスをコピー",
     "copy_hash": "ハッシュをコピー: {{ hash }}",
-    "double_click_copy_address": "ダブルクリックでコピー\n{{ address }}",
+    "double_click_addressbook": "ダブルクリックでアドレス帳に追加\n{{ address }}",
     "force_sync": "同期を強制",
     "refresh": "更新",
     "remove": "削除",
