--- a/src/i18n/locales/ru/core.json
+++ b/src/i18n/locales/ru/core.json
@@ -8,7 +8,7 @@
     "close": "закрыть",
     "copy_address": "скопировать адрес",
     "copy_hash": "скопировать хеш: {{ hash }}",
-    "double_click_copy_address": "дважды щёлкните, чтобы скопировать\n{{ address }}",
+    "double_click_addressbook": "дважды щёлкните, чтобы добавить в адресную книгу\n{{ address }}",
     "force_sync": "принудительная синхронизация",
     "refresh": "обновить",
     "remove": "удалить",
