--- a/src/i18n/locales/de/core.json
+++ b/src/i18n/locales/de/core.json
@@ -121,6 +121,7 @@
       "update_group": "Neue Beschreibung: {{ newDescription }} ID: {{ id }}"
     },
     "error": {
+      "address_already_exists": "Die Adresse existiert bereits im Adressbuch",
       "amount_exceeds_balance": "Maximal zulässig: {{ maxAmount }}",
       "amount_positive": "Der Betrag muss größer als 0 sein",
       "bitcoin_address_invalid": "Ungültige BTC-Adresse",
