--- a/src/i18n/locales/ru/core.json
+++ b/src/i18n/locales/ru/core.json
@@ -122,6 +122,7 @@
       "update_group": "новое описание: {{ newDescription }} ID: {{ id }}"
     },
     "error": {
+      "address_already_exists": "Адрес уже существует в адресной книге",
       "amount_exceeds_balance": "Максимально допустимо: {{ maxAmount }}",
       "amount_positive": "Сумма должна быть больше 0",
       "bitcoin_address_invalid": "Недействительный адрес BTC",
