--- a/src/i18n/locales/pt/core.json
+++ b/src/i18n/locales/pt/core.json
@@ -122,6 +122,7 @@
       "update_group": "nova descrição: {{ newDescription }} ID: {{ id }}"
     },
     "error": {
+      "address_already_exists": "O endereço já existe no catálogo de endereços",
       "amount_exceeds_balance": "Máximo permitido: {{ maxAmount }}",
       "amount_positive": "O valor deve ser maior que 0",
       "bitcoin_address_invalid": "Endereço BTC inválido",
